* Fix clipping of DropDown lists at ImportRulesDialog

--- a/src/view/Components/Import/RulesDialog/style.scss
+++ b/src/view/Components/Import/RulesDialog/style.scss
@@ -1,24 +1,12 @@
 /* Import rules dialog */
 .rules-popup {
-  overflow-y: hidden;
-
   .popup__wrapper {
-    height: 100%;
-  }
-
-  .popup__content,
-  .popup__content-box {
-    max-height: 100%;
-    overflow: hidden;
+    position: relative;
   }
 
   .popup__content-box {
     max-width: 600px;
     width: 100%;
-  }
-
-  .popup__message {
-    overflow-y: auto;
   }
 }
 
